--- a/style/style.css
+++ b/style/style.css
@@ -23,3 +23,8 @@
         flex-direction: column;
     }
   }
+@media only screen and (max-width: 900px) {
+    .cards{
+        flex-direction: column;
+    }
+  }
